@@ -2950,6 +2950,13 @@ accomplish this, the functions png_create_read_struct_2(),
 png_create_write_struct_2(), png_set_mem_fn(), png_get_mem_ptr(),
 png_malloc_default(), and png_free_default() were added.
 
+Support for the iTXt chunk has been enabled by default as of
+version 1.2.41.  If you have been defining PNG_iTXt_SUPPORTED
+already, please continue to do so, as a signal to libpng that your
+previous versions also supported iTXt. If you have not been defining
+PNG_iTXt_SUPPORTED, please don't start now; it will be enabled for
+you by default.
+
 Support for certain MNG features was enabled.
 
 Support for numbered error messages was added.  However, we never got
