@@ -526,6 +526,18 @@
  * will be turned on by default in libpng-1.4.0.
  */
 
+/* If you have previously been defining PNG_iTXt_SUPPORTED, please
+ * continue to do so in libpng-1.2.41 and later, until you switch to
+ * libpng-1.4.0, even though it is not necessary now to gain iTXt support.
+ * Your PNG_iTXt_SUPPORTED definition will be interpreted in png_set_text()
+ * as a signal that you have defined it in your builds of previous libpng
+ * versions that did not support iTXt by default.
+ */
+#if !defined(PNG_iTXt_SUPPORTED) && !defined(PNG_READ_iTXt_SUPPORTED) && \
+    !defined(PNG_WRITE_iTXt_SUPPORTED)
+#  define PNG_iTXt_NOT_PREVIOUSLY_SUPPORTED
+#endif
+
 #if defined(PNG_1_0_X) || defined (PNG_1_2_X)
 #  ifndef PNG_iTXt_SUPPORTED
 #    ifndef PNG_NO_iTXt_SUPPORTED
